--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <h1>What's your future?</h1>
 </header>
 <section>
-    <img src="/assets/images/magic8ball-removebg-preview.png" alt="magic8ball">
+    <img id ="ball" src="/assets/images/magic8ball-removebg-preview.png" alt="magic8ball">
+
     <div aria-label="ask me anything" class="button">
         <button id="questionButton">ASK ME ANYTHING </button>
     </div>
