trying to link box and random answer

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <img id ="ball" src="/assets/images/magic8ball-removebg-preview.png" alt="magic8ball">
 
     <div aria-label="ask me anything" class="button">
-        <button id="questionButton">ASK ME ANYTHING </button>
+        <button id="questionButton" onclick="questionButton()">ASK ME ANYTHING </button>
     </div>
 </section>
     
-<script src="script.js"></script>
+<script src="./assets/js/script.js"></script>
 </body>
 </html>
