trying to fix image file path

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>What's your future?</h1>
 </header>
 <section>
-    <img src="/assets/images/magic8ball-removebg-preview.jpg" id="ball" alt="magic8ball">
+    <img src="./assets/images/magic8ball-removebg-preview.jpg" id="ball" alt="magic8ball">
 
     <div aria-label="ask me anything" class="button">
         <button id="questionButton" onclick="questionButton()">ASK ME ANYTHING </button>
